--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "browser-image-compression": "^2.0.2",
     "http-proxy-middleware": "^2.0.6",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.7",
